# simple-python-cli

./: .gitignore  README.md  pyproject.toml
tests/: test_simple_python_cli.py
