[tool.poetry]
name = "simple-python-cli"
version = "0.1.0"
description = ""
authors = ["masoncusack <1masoncusack@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
simple-python-cli = "simple_python_cli.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
